# argos_ros_epuck_foraging

./: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
launch/: experiment.sh  launcher.sh
loop_functions/: CMakeLists.txt
loop_functions/sim_epuck_loop_functions_foraging/: CMakeLists.txt  sim_epuck_loop_functions_foraging.cpp  sim_epuck_loop_functions_foraging.h
loop_functions/sim_epuck_loop_functions_foraging/id_loop_functions_foraging/: CMakeLists.txt  id_qtuser_functions.cpp  id_qtuser_functions.h
msg/: GroundSensorPack.msg  Leaf.msg  MerkleLeafList.msg  Neighbor.msg  NeighborList.msg  ProximityList.msg  Puck.msg
plugin/: CMakeLists.txt
plugin/argos_ros_epuck_foraging/: .CMakeLists.swp  CMakeLists-RealRobot.txt  CMakeLists-Simulation.txt  CMakeLists.txt  RabBuffer.cpp  RabBuffer.h  argos_ros_epuck_foraging.cpp  argos_ros_epuck_foraging.h
src/: auxiliary_functions.py  controller.py  docker_env.py  maze.py  merkle_tree.py
world/: world-template.argos
